CXP-2391: Code cleanup